# audiotranscriber

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  audiotranscriber.spec  build-windows.ps1  dev.ps1  installer-windows.iss  package-windows.ps1  pyproject.toml  run.bat  run.ps1
src/audiotranscriber/: __init__.py  app_config.py  main.py  resources.py  state.py  system_info.py  update_checker.py
src/audiotranscriber/controllers/: __init__.py  app_controller.py
src/audiotranscriber/pipelines/: __init__.py  post_processing.py  recording.py  transcript_writer.py  transcription.py
src/audiotranscriber/ui/: main_window.py  widgets.py
tools/: dev_reload.py
