[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audiotranscriber"
version = "0.1.4"
description = "Compact local recording and transcription desktop strip."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0",
    "imageio-ffmpeg>=0.5.1",
    "PySide6>=6.7",
    "sounddevice>=0.4.6",
]

[project.scripts]
audiotranscriber = "audiotranscriber.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
